--- a/public/login.html
+++ b/public/login.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-   <html lang="en">
-   <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="/css/styles.css">
-     <title>Login</title>
-   </head>
-   <body>
-     <div class="container">
-       <h1>Login</h1>
-       <form action="/login" method="POST">
-         <input type="text" name="username" placeholder="Username" required>
-         <input type="password" name="password" placeholder="Password" required>
-         <button type="submit">Login</button>
-       </form>
-       <p>Don't have an account? <a href="/signup">Signup</a></p>
-     </div>
-   </body>
-   </html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link rel="stylesheet" href="/css/styles.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Login</h1>
+    <form id="loginForm">
+      <input type="text" name="username" placeholder="Username" required>
+      <input type="password" name="password" placeholder="Password" required>
+      <button type="submit">Login</button>
+    </form>
+    <p>Don't have an account? <a href="/signup">Signup</a></p>
+  </div>
+
+  <script src="/js/scripts.js"></script>
+</body>
+</html>
