--- a/public/home.html
+++ b/public/home.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to Our Website</title>
   <link rel="stylesheet" href="/css/styles.css">
+  <!-- Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
   <!-- Header -->
@@ -39,12 +41,12 @@
   <footer>
     <div class="container">
       <div class="social-icons">
-        <a href="https://github.com" target="_blank"><img src="/images/github.png" alt="GitHub"></a>
-        <a href="https://whatsapp.com" target="_blank"><img src="/images/whatsapp.png" alt="WhatsApp"></a>
-        <a href="https://instagram.com" target="_blank"><img src="/images/instagram.png" alt="Instagram"></a>
-        <a href="https://facebook.com" target="_blank"><img src="/images/facebook.png" alt="Facebook"></a>
+        <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://whatsapp.com" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
       </div>
-      <p>&copy; 2022 Mr Frank. All rights reserved.</p>
+      <p>&copy; 2023 Your Company. All rights reserved.</p>
     </div>
   </footer>
 </body>
