--- a/public/login.html
+++ b/public/login.html
@@ -4,9 +4,114 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - MEGAMINDZ</title>
-  <link rel="stylesheet" href="/css/styles.css">
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <style>
+    /* General Styles */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #0a0a23;
+      color: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    /* Auth Container */
+    .auth-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+
+    /* Auth Box */
+    .auth-box {
+      background-color: #1c1c4a;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 123, 255, 0.5);
+      text-align: center;
+      width: 100%;
+      max-width: 400px;
+      transition: box-shadow 0.3s ease;
+    }
+
+    .auth-box:hover {
+      box-shadow: 0 0 30px rgba(0, 123, 255, 0.8);
+    }
+
+    /* Headings */
+    .auth-box h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+      color: #007bff;
+      text-shadow: 0 0 10px rgba(0, 123, 255, 0.8);
+    }
+
+    .auth-box h2 {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+    }
+
+    /* Form Styles */
+    .auth-box form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .auth-box input {
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      background-color: #333;
+      color: #fff;
+      font-size: 1rem;
+    }
+
+    .auth-box input:focus {
+      outline: none;
+      border: 2px solid #007bff;
+      box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+    }
+
+    .auth-box button {
+      background-color: #007bff;
+      color: #fff;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .auth-box button:hover {
+      background-color: #0056b3;
+      box-shadow: 0 0 10px rgba(0, 123, 255, 0.8);
+    }
+
+    /* Links */
+    .auth-box p {
+      margin-top: 20px;
+    }
+
+    .auth-box a {
+      color: #007bff;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .auth-box a:hover {
+      color: #0056b3;
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <div class="auth-container">
