--- a/public/home.html
+++ b/public/home.html
@@ -3,16 +3,123 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Our Website</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <title>Welcome to MEGAMINDZ</title>
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <style>
+    /* General Styles */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #0a0a23;
+      color: #ffffff;
+    }
+
+    .container {
+      width: 90%;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    /* Header Styles */
+    header {
+      background-color: #1c1c4a;
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    /* Main Content Styles */
+    .welcome-section {
+      text-align: center;
+      padding: 50px 0;
+    }
+
+    .welcome-section h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    .welcome-section p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+
+    .cta-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    .btn {
+      background-color: #007bff;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+
+    .btn:hover {
+      background-color: #0056b3;
+    }
+
+    /* Footer Styles */
+    footer {
+      background-color: #1c1c4a;
+      padding: 20px 0;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 10px;
+    }
+
+    .social-icons a {
+      color: #fff;
+      font-size: 24px;
+      transition: color 0.3s ease;
+    }
+
+    .social-icons a:hover {
+      color: #007bff;
+    }
+  </style>
 </head>
 <body>
   <!-- Header -->
   <header>
     <div class="container">
-      <h1>Welcome to Our Website</h1>
+      <h1>Welcome to MEGAMINDZ</h1>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
@@ -27,7 +134,7 @@
   <main>
     <div class="container">
       <section class="welcome-section">
-        <h2>Hello, World!</h2>
+        <h2>Hello There</h2>
         <p>Welcome to our professional website. We provide the best services for our users. Sign up or log in to get started.</p>
         <div class="cta-buttons">
           <a href="/signup" class="btn">Sign Up</a>
@@ -46,7 +153,7 @@
         <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
       </div>
-      <p>&copy; 2023 Your Company. All rights reserved.</p>
+      <p>&copy; 2025 Mr Frank | All rights reserved.</p>
     </div>
   </footer>
 </body>
